Fix subheader CSS. Allows growing when 'api_managed_roster' is true and additional text is visible.

--- a/src/oncall/ui/static/css/oncall.css
+++ b/src/oncall/ui/static/css/oncall.css
@@ -289,7 +289,7 @@ nav.subnav li.active {
 
 .subheader {
   padding: 20px;
-  height: 110px;
+  min-height: 110px;
   color: #fff;
 }
 
